--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -15,6 +15,10 @@
   </div>
 
   <div class="form-group">
+    <%= f.datetime_field :finish_time, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
     <%= f.datetime_field :deadline_time, class: "form-control" %>
   </div>
 
