create design in events_path

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -31,3 +31,143 @@
   </tbody>
 </table>
 
+<div class="container">
+
+  <div class="row">
+    <div
+      class="col-sm-2"
+      style="
+        padding: 0;
+        margin: 0 10px 5px 0;
+        background: #dc3444;
+        color: var(--bs-white);
+      "
+    >
+      <h1 style="margin: 0px; text-align: center">5/25</h1>
+    </div>
+    <div
+      class="col"
+      style="
+        display: flex;
+        background: #ffffff;
+        padding: 0;
+        margin: 0 0 5px 0;
+      "
+    >
+      <img
+        src="<%= asset_pack_path "media/images/rails_logo.png" %>"
+        style="width: 50px; height: 50px"
+      />
+      <div style="margin: auto 0 ;">
+        <h1 style="margin: 0px; border-top-style: none">
+          &nbsp;Ruby on Rails 勉強会
+        </h1>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="row">
+    <div
+      class="col-sm-2 offset-sm-6"
+      style="
+        padding: 0;
+        margin: 0 10px 0 0;
+        background: rgb(220, 52, 68);
+        color: var(--bs-white);
+        height: 300px;
+      "
+    >
+      <h2 style="text-align: center">18:00&nbsp;</h2>
+      <h1 style="text-align: center">
+        |<br />|<br />|<br />|<br />|
+      </h1>
+      <h2 style="text-align: center">18:00&nbsp;</h2>
+    </div>
+    <div class="col" style="padding: 0px">
+      <div style="position: relative">
+        <img
+          src=<%= asset_pack_path "media/images/meeting.jpg" %>
+          style="width: 100%; opacity: 1; top: 0; height: 300px"
+        />
+        <div
+          style="
+            width: 80%;
+            background: rgba(255, 255, 255, 0.9);
+            position: absolute;
+            top: 0;
+            left: 20%;
+            height: 300px;
+          "
+        >
+          <div
+            style="
+              display: flex;
+              justify-content: flex-start;
+              height: 30px;
+              padding: 5px 10px;
+              margin: 0 0 10px 0;
+            "
+          >
+            <img
+              style="width: 30px; height: 30px; border-radius: 50px"
+              src="<%= asset_pack_path "media/images/react.png" %>"
+            />
+            <p style="height: 30px; font-size: 20px; padding: 0 5px">
+              佐々木&nbsp; 成
+            </p>
+          </div>
+          <div>
+            <p style="padding: 5px 10px; margin: 0 0 5px 0">
+              &nbsp;✔️ <strong>こんなことやります</strong>
+            </p>
+          </div>
+          <div
+            style="
+              width: 90%;
+              border-radius: 20px;
+              margin: 0 5%;
+              border-style: solid;
+              border-color: var(--bs-secondary);
+              padding: 5px 10px;
+            "
+          >
+            <div style="margin: 0 0 5px">
+              <p style="margin: 0">【作業内容】</p>
+              <p style="margin: 0">各々で作業を進めてもらってOKです。</p>
+            </div>
+            <div>
+              <p style="margin: 0">【参加条件】</p>
+              <p style="margin: 0">特にありません。</p>
+              <p style="margin: 0">初めての参加大歓迎です。</p>
+            </div>
+          </div>
+          <div
+            style="
+              display: flex;
+              justify-content: space-between;
+              margin: 0 5%;
+              padding: 15px 0 10px 0;
+            "
+          >
+            <p style="margin: 0; font-size: 16px; text-align: center">
+              参加者数<br />○/○人
+            </p>
+            <p style="margin: 0; font-size: 16px; text-align: center">
+              募集終了まで<br />3:30:59
+            </p>
+            <button
+              class="btn btn-primary"
+              type="button"
+              style="float: right; background: var(--bs-red)"
+            >
+              参加する
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
