--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,173 +1,76 @@
+<%= javascript_pack_tag 'events/index' %>
+<%= stylesheet_pack_tag 'events/index' %>
+
 <h1>Event掲載画面</h1>
 
-<table>
-  <tbody>
-    <% @all_event.each do |event|%>
-      <tr></tr>
-        <td>イベント名：<%= link_to event.event_name, event_path(event) %></td>
-      </tr>
-      <tr>
-        <td>開始時刻：<%= event.start_time %></td>
-      </tr>
-      <tr>
-        <td>終了時刻：<%= event.finish_time %></td>
-      </tr>
-      <tr>
-        <td>申込締切時刻：<%= event.deadline_time %></td>
-      </tr>
-      <tr>
-        <td>参加数：<%= event.user_events.where(apply_status: true).count %>/<%= event.limit_num %></td>
-      </tr>
-      <tr>
-        <td>イベント画像：<%= event.event_image %></td>
-      </tr>
-      <tr>
-        <td>タグ画像：<%= event.event_tag_image %></td>
-      </tr>
-      <tr>
-        <td><br></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<% @all_event.each do |event|%>
 
 <div class="container">
 
-  <div class="row">
-    <div
-      class="col-sm-2"
-      style="
-        padding: 0;
-        margin: 0 10px 5px 0;
-        background: #dc3444;
-        color: var(--bs-white);
-      "
-    >
-      <h1 style="margin: 0px; text-align: center">5/25</h1>
+  <div class="row top">
+    <div class="col-sm-2 top-left-part">
+      <h1>5/25</h1>
     </div>
-    <div
-      class="col"
-      style="
-        display: flex;
-        background: #ffffff;
-        padding: 0;
-        margin: 0 0 5px 0;
-      "
-    >
-      <img
-        src="<%= asset_pack_path "media/images/rails_logo.png" %>"
-        style="width: 50px; height: 50px"
-      />
-      <div style="margin: auto 0 ;">
-        <h1 style="margin: 0px; border-top-style: none">
-          &nbsp;Ruby on Rails 勉強会
-        </h1>
+
+    <div class="col top-right-part">
+      <img src="<%= asset_pack_path "media/images/rails_logo.png" %>"/>
+      <div>
+        <h1>&nbsp;<%= link_to event.event_name, event_path(event) %></h1>
       </div>
     </div>
   </div>
 
 
-  <div class="row">
-    <div
-      class="col-sm-2 offset-sm-6"
-      style="
-        padding: 0;
-        margin: 0 10px 0 0;
-        background: rgb(220, 52, 68);
-        color: var(--bs-white);
-        height: 300px;
-      "
-    >
-      <h2 style="text-align: center">18:00&nbsp;</h2>
-      <h1 style="text-align: center">
+  <div class="row bottom">
+
+    <div class="col-sm-2 offset-sm-6 bottom-left-part">
+      <h2>18:00&nbsp;</h2>
+      <h1>
         |<br />|<br />|<br />|<br />|
       </h1>
-      <h2 style="text-align: center">18:00&nbsp;</h2>
+      <h2>18:00&nbsp;</h2>
     </div>
-    <div class="col" style="padding: 0px">
-      <div style="position: relative">
-        <img
-          src=<%= asset_pack_path "media/images/meeting.jpg" %>
-          style="width: 100%; opacity: 1; top: 0; height: 300px"
-        />
-        <div
-          style="
-            width: 80%;
-            background: rgba(255, 255, 255, 0.9);
-            position: absolute;
-            top: 0;
-            left: 20%;
-            height: 300px;
-          "
-        >
-          <div
-            style="
-              display: flex;
-              justify-content: flex-start;
-              height: 30px;
-              padding: 5px 10px;
-              margin: 0 0 10px 0;
-            "
-          >
-            <img
-              style="width: 30px; height: 30px; border-radius: 50px"
-              src="<%= asset_pack_path "media/images/react.png" %>"
-            />
-            <p style="height: 30px; font-size: 20px; padding: 0 5px">
-              佐々木&nbsp; 成
-            </p>
+
+
+    <div class="col bottom-right-part">
+      <div class="br-box">
+
+        <img src=<%= asset_pack_path "media/images/meeting.jpg" %>/>
+        <div class="content-box">
+          <div class="organizer-user-box">
+            <img src="<%= asset_pack_path "media/images/react.png" %>"/>
+            <p>佐々木&nbsp; 成</p>
           </div>
-          <div>
-            <p style="padding: 5px 10px; margin: 0 0 5px 0">
-              &nbsp;✔️ <strong>こんなことやります</strong>
-            </p>
+          <div class="attraction-title">
+            <p>&nbsp;✔️ <strong>こんなことやります</strong></p>
           </div>
-          <div
-            style="
-              width: 90%;
-              border-radius: 20px;
-              margin: 0 5%;
-              border-style: solid;
-              border-color: var(--bs-secondary);
-              padding: 5px 10px;
-            "
-          >
-            <div style="margin: 0 0 5px">
-              <p style="margin: 0">【作業内容】</p>
-              <p style="margin: 0">各々で作業を進めてもらってOKです。</p>
+          <div class="event-detail-box">
+            <div class="event-detail-content">
+              <p>【作業内容】</p>
+              <p>各々で作業を進めてもらってOKです。</p>
             </div>
             <div>
-              <p style="margin: 0">【参加条件】</p>
-              <p style="margin: 0">特にありません。</p>
-              <p style="margin: 0">初めての参加大歓迎です。</p>
+              <p>【参加条件】</p>
+              <p>特にありません。</p>
+              <p>初めての参加大歓迎です。</p>
             </div>
           </div>
-          <div
-            style="
-              display: flex;
-              justify-content: space-between;
-              margin: 0 5%;
-              padding: 15px 0 10px 0;
-            "
-          >
-            <p style="margin: 0; font-size: 16px; text-align: center">
-              参加者数<br />○/○人
-            </p>
-            <p style="margin: 0; font-size: 16px; text-align: center">
-              募集終了まで<br />3:30:59
-            </p>
-            <button
-              class="btn btn-primary"
-              type="button"
-              style="float: right; background: var(--bs-red)"
-            >
+
+          <div class="content-box-footer">
+            <p>参加者数<br /><%= event.user_events.where(apply_status: true).count %>/<%= event.limit_num %>人</p>
+            <p>募集終了まで<br /><%= event.deadline_time.strftime("%m-%d %H:%M:%S") %></p>
+            <button class="btn btn-primary" type="button">
               参加する
             </button>
           </div>
         </div>
+
       </div>
     </div>
+
   </div>
 </div>
+
+<% end %>
 
 
