align new_events_path

--- a/app/javascript/src/scss/application.scss
+++ b/app/javascript/src/scss/application.scss
@@ -21,3 +21,11 @@ header {
   color: white;
   padding-right: 20px;
 }
+
+footer {
+  background-color: #1cc996;
+  padding: 5px 10px 0px 10px;
+  display: flex;
+  justify-content: space-between;
+  color: white;
+}
