--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -32,7 +32,7 @@
             <div class="right-side-detail-box">
                 <div class="event-purpose-box">
                     <h5>・イベントの目的</h5>
-                    <div></div>
+                    <div>qqqqqq</div>
                 </div>
                 <div class="event-news-box">
                     <h5>・お知らせ</h5>
@@ -70,9 +70,6 @@
                         <div>
                             <h6>開催者のプロフィールを見る</h6>
                             <h6>このイベントについて質問する</h6>
-                        </div>
-                        <div>
-                          <button class="btn btn-primary" type="button">参加する</button>
                         </div>
                     </div>
                 </div>
