--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -3,15 +3,15 @@
 <%= form_with model:@new_group ,local: true do |f| %>
 
   <div class="form-group">
-    <%= f.text_field :group_name, class: "form-control", placeholder: "グループの名前" %>
+    <%= f.text_field :name, class: "form-control", placeholder: "グループの名前" %>
   </div>
 
   <div class="form-group">
-    <%= f.text_area :group_introduction, class: "form-control", placeholder: "グループの紹介" %>
+    <%= f.text_area :ntroduction, class: "form-control", placeholder: "グループの紹介" %>
   </div>
 
   <div class="form-group">
-    <%= f.text_field :group_image, class: "form-control", placeholder: "グループの画像" %>
+    <%= f.text_field :icon_image, class: "form-control", placeholder: "グループの画像" %>
   </div>
 
   <%= f.submit "作成" %>
