create timer to show zoom_url

--- a/app/views/events/_one_event.html.erb
+++ b/app/views/events/_one_event.html.erb
@@ -2,7 +2,7 @@
 
   <div class="row top">
     <div class="col-sm-2 top-left-part">
-      <h1>5/25</h1>
+      <h1><%= event.start_time.strftime('%m/%d') %></h1>
     </div>
 
     <div class="col top-right-part">
@@ -17,11 +17,11 @@
   <div class="row bottom">
 
     <div class="col-sm-2 offset-sm-6 bottom-left-part">
-      <h2>18:00&nbsp;</h2>
+      <h2><%= event.start_time.strftime('%H:%M') %></h2>
       <h1>
         |<br />|<br />|<br />|<br />|
       </h1>
-      <h2>18:00&nbsp;</h2>
+      <h2><%= event.finish_time.strftime('%H:%M') %></h2>
     </div>
 
 
