--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -67,7 +67,7 @@
               </div>
               <h6>＊参加上限人数</h6>
               <div style="display: flex; padding: 0 0 0 10px; height: 35px">
-                <%= f.text_field :max_apply_num, class: "form-control",style:"height: 30px; width: 30px;"%>
+                <%= f.text_field :max_apply_number, class: "form-control",style:"height: 30px; width: 30px;"%>
                 <p style="font-size: 23px">人</p>
               </div>
               <h6>＊参加資格</h6>
