--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -8,16 +8,19 @@
 <table>
   <tbody>
       <% if @event.join_by_user?(current_user) %>
-        <p><%= link_to "参加をキャンセルする" , apply_status_update_event_path(@event), method: :post %>
+        <%= link_to "参加をキャンセルする" , apply_status_update_event_path(@event), method: :post ,class:"apply_link" %>
       <% else %>
-        <p><%= link_to "参加する" , apply_status_update_event_path(@event), method: :post %>
+        <%= link_to "参加する" , apply_status_update_event_path(@event), method: :post ,class:"apply_link" %>
       <% end %>
       <tr>
         <p><%= link_to "申込者一覧", applies_event_path(@event) %></p>
       </tr>
+      <% if @event.join_by_user?(current_user) %>
       <tr>
-        <p>zoomのurl(イベント当日、参加者にのみ表示されます。) : <%= @event.zoom_url %></p>
+        <p >zoomのurl(イベント当日、参加者にのみ表示されます。)</p>
+        <p class="zoom_url" hidden><%= @event.zoom_url %></p>
       </tr>
+      <% end %>
   </tbody>
 </table>
 
